# react-native-clvm

./: .gitmodules  CONTRIBUTING.md  package.json  react-native-clvm.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/libs/: gmp-6.3.0-beta-1.aar
android/src/main/: AndroidManifest.xml
android/src/main/java/com/clvm/: ClvmModule.java  ClvmPackage.java
android/src/newarch/: ClvmSpec.java
android/src/oldarch/: ClvmSpec.java
cpp/: JsiClvmApi.cpp  JsiClvmApi.h  JsiClvmHostObjects.h  JsiClvmIterator.h  JsiClvmObject.h  JsiClvmObjectAtom.h  JsiClvmObjectFactory.h  JsiClvmObjectPair.h  JsiClvmObjectWrapper.h  JsiHostObject.cpp  JsiProgram.h  JsiPromises.h  JsiSExp.h  JsiSExp1.h  RNClvmLog.h  RNClvmUtils.cpp  RNClvmUtils.h  RuntimeLifecycleMonitor.cpp  base64.cpp  base64.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/clvmexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ClvmExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ClvmExample.xcodeproj/: project.pbxproj
example/ios/ClvmExample.xcodeproj/xcshareddata/xcschemes/: ClvmExample.xcscheme
example/ios/ClvmExample.xcworkspace/: contents.xcworkspacedata
example/ios/ClvmExampleTests/: ClvmExampleTests.m
example/src/: App.tsx
example/src/hooks/: useTestList.ts
example/src/navigators/children/benchmarks/: Benchmarks.tsx
ios/: Clvm.h  Clvm.mm
ios/Clibgmp.xcframework/: Info.plist
ios/Clibgmp.xcframework/ios-arm64_x86_64-simulator/Headers/: gmp.h
src/: Clvm.ts  NativeCLVM.ts  index.ts
src/types/: Clvm.ts  ClvmObject.ts  Program.ts  SExp.ts  index.ts
